[package]
name = "yocto"
description = "A minimal, memory-only data store"
version = "0.1.0"
authors = ["Alexander Becker"]
license = "MIT"
repository = "https://github.com/alebeck/yocto"
edition = "2018"

[dependencies]
chashmap = "2.2.2"
clap = "2.32.0"
log = "0.3.0"
ansi_term = "0.10.0"
isatty = "0.1.3"
unicode-segmentation = "1.2.0"